--- a/index.html
+++ b/index.html
@@ -1,24 +1,36 @@
 
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Dr. Prabha's Dental Clinic</title>
-    <meta name="description" content="Dr. Prabha's Dental Clinic - Professional dental care in Chennai." />
-    <meta name="author" content="Dr. Prabha's Dental Clinic" />
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Dr. Prabha's Dental Clinic | Best Dentist in Chennai</title>
+  
+  <!-- Primary Meta Tags -->
+  <meta name="description" content="Dr. Prabha's Dental Clinic in Chennai offers expert dental care including root canal, braces, implants, cosmetic dentistry, and more." />
+  <meta name="keywords" content="dental clinic in Chennai, dentist in Chennai, dental hospital, root canal, dental implants, teeth whitening, braces, dental care Chennai, cosmetic dentistry Chennai" />
+  <meta name="author" content="Dr. Prabha's Dental Clinic" />
 
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap">
+  <!-- Open Graph / Facebook -->
+  <meta property="og:title" content="Dr. Prabha's Dental Clinic | Best Dental Hospital in Chennai" />
+  <meta property="og:description" content="Expert dental care in Chennai: Implants, braces, root canal, and more." />
+  <meta property="og:type" content="website" />
+  <meta property="og:image" content="/images/og-image.jpg" /> <!-- Replace with actual image path -->
+  <meta property="og:url" content="https://www.prabhasdentalclinic.com" />
 
-    <meta property="og:title" content="Dr. Prabha's Dental Clinic" />
-    <meta property="og:description" content="Professional dental care in Chennai." />
-    <meta property="og:type" content="website" />
-    <meta property="og:image" content="" />
+  <!-- Twitter -->
+  <meta name="twitter:card" content="summary_large_image" />
+  <meta name="twitter:title" content="Dr. Prabha's Dental Clinic | Chennai's Trusted Dental Hospital" />
+  <meta name="twitter:description" content="Affordable and professional dental care services in Chennai." />
+  <meta name="twitter:image" content="/images/twitter-image.jpg" /> <!-- Replace with actual image path -->
 
-    <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:site" content="" />
-    <meta name="twitter:image" content="" />
-  </head>
+  <!-- Fonts -->
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap">
+
+  <!-- Canonical Link -->
+  <link rel="canonical" href="https://www.prabhasdentalclinic.com" />
+</head>
+
 
   <body>
     <div id="root"></div>
