--- a/index.html
+++ b/index.html
@@ -15,14 +15,14 @@
   <meta property="og:title" content="Dr. Prabha's Dental Clinic | Best Dental Hospital in Chennai" />
   <meta property="og:description" content="Expert dental care in Chennai: Implants, braces, root canal, and more." />
   <meta property="og:type" content="website" />
-  <meta property="og:image" content="/images/og-image.jpg" /> <!-- Replace with actual image path -->
+  <meta property="og:image" content="/images/og-image.jpg" />
   <meta property="og:url" content="https://www.prabhasdentalclinic.com" />
 
   <!-- Twitter -->
   <meta name="twitter:card" content="summary_large_image" />
   <meta name="twitter:title" content="Dr. Prabha's Dental Clinic | Chennai's Trusted Dental Hospital" />
   <meta name="twitter:description" content="Affordable and professional dental care services in Chennai." />
-  <meta name="twitter:image" content="/images/twitter-image.jpg" /> <!-- Replace with actual image path -->
+  <meta name="twitter:image" content="/images/twitter-image.jpg" /> 
 
   <!-- Fonts -->
   <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap">
